# cppmonkey

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  macros.cmake
main/: CMakeLists.txt  ast.cpp  ast.hpp  core.cpp  core.hpp  environment.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  fobject.cpp  fobject.hpp  lexer.cpp  lexer.hpp  main.cpp  object.cpp  object.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  evaluator.cpp  lexer.cpp  main.cpp  parser.cpp
